--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "react-native-hideable-view",
-  "version": "1.0.3",
-  "description": "A view component that can toggle visibility of its child views with or without animation.",
+  "name": "react-native-hideable-view-49",
+  "version": "1.0.4",
+  "description": "A view component that can toggle visibility of its child views with or without animation. for RN > 48",
   "main": "HideableView.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/osagie/react-native-hideable-view.git"
+    "url": "git+https://github.com/tjadli/react-native-hideable-view.git"
   },
   "dependencies": {
     "react": ">=15.2.0",
-    "react-native": ">=0.29.0"
+    "react-native": ">=0.48.0"
   },
   "keywords": [
     "react-native",
     "hide",
     "toggle"
   ],
-  "author": "Osagie Edebiri (http://osagiethegreat.com)",
+  "author": "tjadli",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/osagie/react-native-hideable-view/issues"
+    "url": "https://github.com/tjadli/react-native-hideable-view/issues"
   },
-  "homepage": "https://github.com/osagie/react-native-hideable-view#readme"
+  "homepage": "https://github.com/tjadli/react-native-hideable-view#readme"
 }
